src/test/deca/syntax/invalid/provided/simple_lex-lex.corr
IDENT: [@0,206:208='idf',<47>,11:0]
IDENT: [@1,210:219='_autre_idf',<47>,11:4]
OBRACE: [@2,221:221='{',<14>,12:0]
CBRACE: [@3,223:223='}',<15>,13:0]
OPARENT: [@4,225:225='(',<12>,14:0]
CPARENT: [@5,227:227=')',<13>,15:0]
